parser/src/test/resources/corpus/valid/14_effective_named_period.ff
rule "Quarter Period" {
  effective: Q1 2026
}
