parser/src/test/resources/corpus/invalid/08_extra_close_brace.ff
rule "Extra Close Brace" {
  description: "ok"
}
}
